# swagger_output.json
@@ -69,6 +69,36 @@
         }
       }
     },
+    "/website/startStopWebsite/{id}": {
+      "put": {
+        "tags": [
+          "Website"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "schema": {
+              "$ref": "#/definitions/startStopWebsite"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/backup/": {
       "get": {
         "tags": [
@@ -106,6 +136,24 @@
           },
           "404": {
             "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/backup/{id}": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
@@ -195,6 +243,18 @@
         "cpu",
         "memory",
         "status"
+      ]
+    },
+    "startStopWebsite": {
+      "type": "object",
+      "properties": {
+        "_id": {
+          "type": "string",
+          "example": "6476fafd31fe80568d17ccb5"
+        }
+      },
+      "required": [
+        "_id"
       ]
     },
     "Backup": {
